modules/contentbox-admin/includes/css/contentbox.css
/**============================== ADMIN MAIN ELEMENTS ==============================**/
html{ 
	height:100%;
	color: #3B3B3B;
}
body{ 
	margin: 0;
	width:100%;
	height:100%;
	padding-top: 100px;
	padding-left: 0px !important;
	padding-right: 0px !important;
  	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 13px;
  	line-height: 20px;
	color: #333333;
	background-color: #F5F5F5;
	background-image: linear-gradient(to bottom, #ddd, #F5F5F5);
	background-image: -moz-linear-gradient(top, #ddd, #F5F5F5);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ddd), to(#F5F5F5));
	background-image: -webkit-linear-gradient(top, #ddd, #F5F5F5);
	background-image: -o-linear-gradient(top, #ddd, #F5F5F5);
	background-image: linear-gradient(to bottom, #ddd, #F5F5F5);
	background-repeat: repeat-x;
}
.container-fluid{ padding-bottom: 100px }
ol { list-style:decimal inside; }
ul { list-style:disc inside; }
#main-sidebar{ margin-left: 20px !important;}
.hero-unit{padding:50px; margin-top:20px; margin-bottom: 20px}
.well{ margin-bottom: 10px; margin-top: 10px;}
img{ height: inherit; }
img.img-screenshot{ height: 200px; }
input,
textarea,
.uneditable-input {
  width: inherit;
}
/**============================== ADMIN MAIN TOP MENU ==============================**/
#adminMenuTopNav { font-size: 13px; z-index: 9999}
#adminMenuTopNav .container{ margin-left: 25px; margin-right: 25px; width: auto;}
#adminMenuTopNav .brand{ font-size: 14px; padding-right:10px}
#adminMenuTopNav .nav > li > a { padding: 8px 5px;}
#adminMenuTopNav .navbar-inner {
    background-color: #1B1B1B;
    background-image: linear-gradient(to bottom, #525252, #111111);
    background-image: -moz-linear-gradient(top, #525252, #111111);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#525252), to(#111111));
	background-image: -webkit-linear-gradient(top, #525252, #111111);
	background-image: -o-linear-gradient(top, #525252, #111111);
	background-image: linear-gradient(to bottom, #525252, #111111);
	background-repeat: repeat-x;
    border-color: #252525;
}
#adminMenuTopNav #logo{ margin: 5px 10px 0px 0px;float:left;height:25px}
#adminActionNotifier{ font-size:13px; position: absolute; right:10px; min-width:250px; z-index: 9999; box-shadow:0 0 6px #ccc; -moz-box-shadow:0 0 6px #ccc; -webkit-box-shadow:0 0 6px #ccc; margin: auto}
/**============================== ADMIN MAIN NAVBAR SEARCH ==============================**/
#nav-search { padding: 6px 14px 2px 14px; }
#div-search-results{
	display: none;
	top: 35px;background-color: black; padding: 5px 10px; width: 400px; position: absolute; min-height: 100px; z-index: 9999;
	box-shadow:0 0 6px #ccc; -moz-box-shadow:0 0 6px #ccc; -webkit-box-shadow:0 0 6px #ccc; 
	border-radius:6px; -moz-border-radius:6px; -webkit-border-radius:6px;
}
#div-search-results h2{ color: #31ADE8; font-size: 16px; font-weight: normal;}
#div-search-results ul{ font-size: 12px}
#div-search-results li{ margin: 3px 0px }
/**============================== ADMIN MAIN GENERATED MENU ==============================**/
#adminMenuBar { top: 41px; }
#adminMenuBar .container{ margin-left: 20px; margin-right: 20px; width: auto;}
#adminMenuBar .nav > li { line-height:20px;}
#adminMenuBar .nav > li > a{ padding: 10px;}
#adminMenuBar .nav li.dropdown:hover ul.dropdown-menu{ display: block; }
#adminMenuBar .navbar-inner {
    background-color: #343434;
    background-image: linear-gradient(to bottom, #343434, #111111);
    background-image: -moz-linear-gradient(top, #343434, #111111);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#343434), to(#111111));
	background-image: -webkit-linear-gradient(top, #343434, #111111);
	background-image: -o-linear-gradient(top, #343434, #111111);
	background-image: linear-gradient(to bottom, #343434, #111111);
	background-repeat: repeat-x;
    border-color: #252525;
}
/**============================== FOOTER ==============================**/
footer {
    background-color: #1B1B1B;
    opacity: 0.90;
    background-image: linear-gradient(to bottom, #3B3B3B, #111111);
    background-image: -moz-linear-gradient(top, #3B3B3B, #111111);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3B3B3B), to(#111111));
	background-image: -webkit-linear-gradient(top, #3B3B3B, #111111);
	background-image: -o-linear-gradient(top, #3B3B3B, #111111);
	background-image: linear-gradient(to bottom, #3B3B3B, #111111);
	background-repeat: repeat-x;
    border-color: #252525;
    border-top: 1px solid #222222;
    box-shadow: 0 1px 0 #666666 inset;
    color: #EEEEEE;
    bottom: 0px;
    position:fixed;
    height: 50px;
    padding: 20px;
    width: 100%;
    font-size: 11px;
}
footer a { color:#fff; text-decoration:underline; }
footer a:hover{ color: #3a87ff}
footer #footerLogo img{ margin:-17px 35px; box-shadow:0 0 6px #ccc; -moz-box-shadow:0 0 6px #ccc; -webkit-box-shadow:0 0 6px #ccc; }
/**============================== Form Styling ==============================**/
fieldset { border:1px solid #d2d1d1; background-color:#f5f5f5; padding:8px; margin:15px 2px; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; }
fieldset legend { color:#3a3a3a; font-weight: bold; border-bottom: none; width: inherit; line-height:20px; font-size: inherit; margin: 0px}
form label { font-size:1em; font-weight:bold; display:block; margin:2px 0; }
form input.textfield, form select, form textarea{ padding:6px; margin-right:4px; }
form textarea,form .wysiwyg { width:98%; }
.modal form { margin:0px !important; }
/**============================== ColdBox MessageBox ==============================**/
.cbox_messagebox { font-weight:bold; margin:10px; }
.cbox_messagebox_info { background:#D1E6EF url(../images/iinfo_icon.png) no-repeat scroll .5em 50%; color:#3760b5; border:1px solid #c3d7ff; margin:.3em auto; padding:0 1em 0 3.5em; }
/* ... */

